// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Component Snapshots Basic rendering should not render title when not provided 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      />
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Basic rendering should render task component with momentum UI components 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected custom-style md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Basic rendering should render task title when provided 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Task Title
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Basic rendering should render task with proper types for state and queue 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Typed Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Support
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Time Left: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button interactions should handle button states correctly 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="true"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          disabled=""
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button interactions should render accept button and handle clicks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button interactions should render both accept and decline buttons 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept Call
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline Call
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Button interactions should render decline button and handle clicks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Component integration should integrate properly with all momentum components 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Complete Integration Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Active
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Component integration should render complex task with all features 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected complex-task-style md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="complex-task-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="chat"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-complex-task-123"
        >
          Complex Task with All Features
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Complex Task with All Features
        </mdc-tooltip>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept Chat
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline Chat
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Component integration should render incoming task with countdown 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="incoming-vip-call"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Call with Countdown
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Vip
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Time Left: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept VIP Call
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge cases and error handling should handle all button combinations 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Full Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      >
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:accept-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Accept Call
          </span>
        </button>
        <button
          class="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="cancel"
          data-disabled="false"
          data-disabled-outline="false"
          data-ghost="false"
          data-grown="false"
          data-inverted="false"
          data-outline="false"
          data-shallow-disabled="false"
          data-size="40"
          data-testid="task:decline-button"
          tabindex="-1"
          type="button"
        >
          <span>
            Decline Call
          </span>
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge cases and error handling should handle empty title 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      />
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Edge cases and error handling should handle missing props gracefully 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      />
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Integration with test fixtures should render task using mockTask data 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    id="test-interaction-123"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Test Customer
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          New
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media type rendering should render Avatar for most media types and Brandvisual only for specific social channels: avatar-chat 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="chat"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-undefined"
        >
          Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Task
        </mdc-tooltip>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media type rendering should render Avatar for most media types and Brandvisual only for specific social channels: avatar-email 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="email"
        icon-name="email-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-undefined"
        >
          Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Task
        </mdc-tooltip>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media type rendering should render Avatar for most media types and Brandvisual only for specific social channels: avatar-social 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="social"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-undefined"
        >
          Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Task
        </mdc-tooltip>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media type rendering should render Avatar for most media types and Brandvisual only for specific social channels: avatar-telephony 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media type rendering should render Avatar for most media types and Brandvisual only for specific social channels: brandvisual-apple 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <div
        class="brand-visual-background"
      >
        <mdc-brandvisual
          class="applemessages"
        />
      </div>
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-undefined"
        >
          Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Task
        </mdc-tooltip>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media type rendering should render Avatar for most media types and Brandvisual only for specific social channels: brandvisual-facebook 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <div
        class="brand-visual-background"
      >
        <mdc-brandvisual
          class="facebook"
        />
      </div>
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-undefined"
        >
          Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Task
        </mdc-tooltip>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Media type rendering should render Avatar for most media types and Brandvisual only for specific social channels: brandvisual-whatsapp 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <div
        class="brand-visual-background"
      >
        <mdc-brandvisual
          class="whatsapp"
        />
      </div>
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-undefined"
        >
          Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Task
        </mdc-tooltip>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display different queue types: task-queue-sales 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Queue Task 1
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Sales
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display different queue types: task-queue-support 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Queue Task 0
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Support
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display different queue types: task-queue-technical 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Queue Task 2
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Technical
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display different task states: task-state-active 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task 1
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Active
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display different task states: task-state-connected 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task 3
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Connected
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display different task states: task-state-hold 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task 2
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Hold
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display different task states: task-state-new 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Task 0
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          New
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display queue information for incoming tasks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Support
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots State and queue display should display task state when configured 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Active Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Connected
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Task selection and styling should render selectable task 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Selectable Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Task selection and styling should render selected task with custom styles 1`] = `
<div>
  <li
    class="task-list-item task-list-item--selected custom-style md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Styled Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Task selection and styling should render unselected task 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Unselected Task
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots TaskTimer integration should render TaskTimer for handle time display 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Active Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Connected
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Handle Time: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots TaskTimer integration should render TaskTimer with countdown for incoming tasks 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="telephony"
        icon-name="handset-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-title"
        >
          Incoming Task
        </mdc-text>
        <mdc-text
          class="md-text-wrapper task-text"
        >
          Time Left: 
            
          <time
            class="task-text task-text--secondary"
            datetime="00:00"
          >
            00:00
          </time>
        </mdc-text>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;

exports[`Task Component Snapshots Tooltip functionality should render tooltip for digital media types 1`] = `
<div>
  <li
    class="task-list-item md-list-item-base-wrapper"
    data-allow-text-select="false"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="0"
  >
    <div
      data-position="start"
    >
      <mdc-avatar
        class="chat"
        icon-name="chat-filled"
      />
    </div>
    <div
      data-position="fill"
    >
      <section
        class="task-details"
      >
        <mdc-text
          class="md-text-wrapper task-digital-title"
          id="tooltip-trigger-undefined"
        >
          Digital Task
        </mdc-text>
        <mdc-tooltip
          class="task-tooltip"
          tooltip-type="description"
        >
          Digital Task
        </mdc-tooltip>
      </section>
    </div>
    <div
      data-position="end"
    >
      <div
        class="task-button-container"
      />
    </div>
  </li>
</div>
`;
